# neurality-health

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  agent.py  audit.py  docker-compose.yml  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt  server.py  supervisord.conf  test.md  tools.py
fixtures/: __init__.py  bookings.py  insurance.py  providers.py
prompts/: manifest.json
sample_outputs/: error-coverage-denied.json  success-booking.json
tests/: __init__.py  conftest.py  test_audit.py  test_fixtures.py  test_server.py  test_tools.py
